[package]
name = "neqo_glue"
version = "0.1.0"
authors = ["Dragana Damjanovic <dd.mozilla@gmail.com>"]
edition = "2018"

[lib]
name = "neqo_glue"

[dependencies]
neqo-http3 = { path = "/home/agrover/git/neqo/neqo-http3" }
neqo-transport = { path = "/home/agrover/git/neqo/neqo-transport" }
neqo-common = { path = "/home/agrover/git/neqo/neqo-common" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../xpcom/rust/xpcom" }
thin-vec = { version = "0.1.0", features = ["gecko-ffi"] }
log = "0.4"

[dependencies.neqo-crypto]
path = "/home/agrover/git/neqo/neqo-crypto"
default-features = false
features = ["gecko"]
