[package]
name = "neqo_glue"
version = "0.1.0"
authors = ["Dragana Damjanovic <dd.mozilla@gmail.com>"]
edition = "2018"

[lib]
name = "neqo_glue"

[dependencies]
neqo-http3 = { git = "https://github.com/mozilla/neqo" }
neqo-transport = { git = "https://github.com/mozilla/neqo" }
neqo-common = { git = "https://github.com/mozilla/neqo" }
neqo-qpack = { git = "https://github.com/mozilla/neqo" }
nserror = { path = "../../../xpcom/rust/nserror" }
nsstring = { path = "../../../xpcom/rust/nsstring" }
xpcom = { path = "../../../xpcom/rust/xpcom" }
thin-vec = { version = "0.1.0", features = ["gecko-ffi"] }

[dependencies.neqo-crypto]
git = "https://github.com/mozilla/neqo"
default-features = false
features = ["gecko"]
